API mostly finished, need to fix POST
